archive/old-cluster-configs/cluster-b/istio/02-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: nf-b-namespace
spec:
  mtls:
    mode: STRICT
