archive/old-cluster-configs/cluster-b/istio/04-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nf-b-gateway
  namespace: nf-b-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-didcomm
      protocol: HTTP
    hosts:
    - "*"
