archive/old-cluster-configs/cluster-b/istio/03-destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: veramo-nf-b-mtls
  namespace: nf-b-namespace
spec:
  host: veramo-nf-b.nf-b-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
